# rss-email

./: .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  .pylintrc  AI_WORKFLOW.md  CLAUDE.md  FUNCTIONAL_TEST_README.md  README.md  README_CLAUDE_INTEGRATION.md  cdk.json  generate_test_podcast.py  package-lock.json  package.json  pyproject.toml  setup.cfg  test_article_processor.py  test_claude_improvements.py  test_functional_workflow.py  test_podcast_local.py  tsconfig.json
.claude/: settings.local.json
.github/workflows/: agent-executor.yml  agent-planner.yml  agent-reviewer.yml  agent-triage.yml  eval.yml  lint_and_test.yml  pylint.yml  test-cdk.yml
eval/: README.md  package-lock.json  package.json  promptfooconfig.yaml  provider.py
eval/assertions/: major_coverage.cjs  schema.cjs  source_ranking.cjs
eval/fixtures/2026-06-15/: digest_articles.json  digest_text.txt  expected_major.json
lib/: rss_lambda_stack.ts  rss_pipeline_app_stage.ts  rss_pipeline_stack.ts
src/: cli_article_processor.py  cli_brief_generator.py
src/rss_email/: article_grouper.py  article_processor.py  brief_body.html  brief_config.json  brief_generator.py  check_email_batch_status.py  check_podcast_batch_status.py  compression_utils.py  email_articles.py  email_body.html  email_body_enhanced.html  email_body_enhanced_simple.html  json_repair.py  json_utils.py  log_forwarder.js  models.py  package-lock.json  package.json  podcast_generator.py  retrieve_and_generate_podcast.py  retrieve_and_send_email.py  retrieve_articles.py  retrieve_rss_articles.py  submit_email_batch.py  submit_podcast_batch.py  test_log_forwarder.js
src/rss_email/tests/: test_retrieve_articles.py  test_urls.json
tests/: test_all_feeds.py  test_article_data.py  test_article_grouper.py  test_article_processor.py  test_batch_metadata_enrichment.py  test_brief_generator.py  test_check_email_batch_status.py  test_claude_improvements.py  test_comprehensive_email_flow.py  test_decompression.py  test_email_articles.py  test_functional_workflow.py  test_html_generation_comments.py  test_json_repair.py  test_last_run.py  test_podcast_batch_modules.py  test_podcast_generator.py  test_podcast_script_prompt.py  test_processed_article_comments.py  test_retrieve_and_send_email.py  test_retrieve_articles.py  test_retrieve_rss_articles.py  test_retry_and_comments.py  test_submit_email_batch.py
