[tool.poetry]
name = "rss_email"
version = "0.1.0"
description = "Delivers your daily RSS news via email."
authors = ["Eamon Mason <eamon.mason@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
boto3 = "^1.28.49"
feedparser = "^6.0.10"
PyRSS2Gen = "^1.1"
beautifulsoup4 = "^4.12.2"
pydantic = "^2.10.6"
anthropic = "^0.52.0"
regex = "^2024.11.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
prospector = "^0.12.2"
pytest = "^7.4.3"
moto = "^4.2.7"
pylint = "^3.0.2"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
pythonpath = "src"

[tool.pylint.MASTER]
init-hook = "import sys; sys.path.insert(0, 'src')"
